apps/staging/linkding/cloudflare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: cloudflared
  template:
    metadata:
      labels:
        pod: cloudflared
    spec:
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        sysctls:
        # Allows ICMP traffic (ping, traceroute) to resources behind cloudflared.
          - name: net.ipv4.ping_group_range
            value: "65532 65532"
        capabilities:
          drop:
            - ALL
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: cloudflare/cloudflared:2026.10.0
          name: cloudflared
          command:
            # Configures tunnel run parameters
            - cloudflared
            - tunnel
            - --config
            - /etc/cloudflared/config/config.yaml
            - --no-autoupdate
            - run
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              # Cloudflared has a /ready endpoint which returns 200 if and only if
              # it has an active connection to Cloudflare's network.
              path: /ready
              port: 2000
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
          - name: tunnel-creds
            mountPath: /etc/cloudflared/creds
          - name: cloudflared-cm
            mountPath: /etc/cloudflared/config
            readOnly: true
          resources:
            requests:
              memory: 16Mi
              cpu: 5m
            limits:
              memory: 30Mi
      volumes:
      - name: tunnel-creds
        secret:
          secretName: tunnel-credentials
      - name: cloudflared-cm
        configMap:
          name: cloudflared-cm
          items:
          - key: config.yaml
            path: config.yaml
